--- a/GitHubManager/Properties/Settings.settings
+++ b/GitHubManager/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="UserName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="RepositoryOwner" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
