--- a/GitHubManager/.vshistory/GitHubManager.csproj/2022-06-24_20_00_42_966.csproj
+++ b/GitHubManager/.vshistory/GitHubManager.csproj/2022-06-24_20_00_42_966.csproj
@@ -8,6 +8,7 @@
     <Company>kenevans.net</Company>
     <Copyright>Copyright © Kenneth Evans 2021</Copyright>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <AssemblyName>GitHubManager</AssemblyName>
     <FileVersion>1.1.0.0</FileVersion>
     <Version>1.1.0.0</Version>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
